# cmake-it

./: .gitattributes  .gitignore  LICENSE  README.md  build.local.example  build.sh  remote_target.sh  run.local.example  run.sh
examples/sample/: CMakeLists.txt  build.sh
examples/sample/test/: test.c
examples/sample_with_asm/: CMakeLists.txt  bootstrap.cmake  run.sh
examples/sample_with_asm/src/: foo.c  message_arm32.S  message_arm64.S  message_x64.S  message_x86.S
examples/sample_with_asm/test/: test.c
settings/: build.local.example  run.local.example
